feat(api-service): add Job endpoints
